# WFX

./: .ciignore  .gitignore  .todo  404.html  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICES.md  README.md  index.html  mkdocs.yml  test.html  toolchain.toml  wfx  wfx.toml
.github/workflows/: ci_filter.yml  linux_build.yml
api_reference/async/: index.html
api_reference/constructor/: index.html
api_reference/forms/: index.html
api_reference/middleware/: index.html
api_reference/overview/: index.html
api_reference/request_and_response/: index.html
api_reference/routing/: index.html
api_reference/templates/: index.html
cli/: main.cpp
cli/commands/cmd_build/: build.cpp  build.hpp
cli/commands/cmd_dev/: dev.cpp  dev.hpp  dev_helper.cpp  dev_helper.hpp
cli/commands/cmd_doctor/: doctor.cpp  doctor.hpp
cli/commands/cmd_new/: new.cpp  new.hpp
cli/commands/cmd_run/: run.cpp  run.hpp
cli/commands/common/: common.cpp  common.hpp
cmake/: ssl_openssl.cmake  third_party.cmake
config/: config.cpp  config.hpp  config_helper.hpp
core_concepts/engine_commands/: index.html
core_concepts/project_structure/: index.html
core_concepts/wfx_toml/: index.html
docs/api_reference/: middleware.md  overview.md  request_and_response.md  routing.md
docs/core_concepts/: engine_commands.md  project_structure.md  toolchain_toml.md  wfx_toml.md
docs/getting_started/: first_program.md  installation.md
engine/: core_engine.cpp  core_engine.hpp  engine.cpp  engine.hpp  template_engine.cpp  template_engine.hpp  template_interface.hpp  template_transpiler.cpp
engine/legacy/: lexer.cpp  lexer.hpp  token.hpp
getting_started/first_program/: index.html
getting_started/installation/: index.html
http/common/: http_detector.cpp  http_detector.hpp  http_global_state.hpp  http_route_common.hpp  route_common.hpp
http/connection/: http_connection.cpp  http_connection.hpp  http_connection_factory.hpp
http/constants/: http_constants.hpp
http/formatters/parser/: http_parser.cpp  http_parser.hpp
http/formatters/serializer/: http_serializer.cpp  http_serializer.hpp
http/headers/: http_headers.cpp  http_headers.hpp  http_headers.ipp
http/limits/: base_limiter.hpp
http/limits/ip_limiter/: ip_limiter.cpp  ip_limiter.hpp
http/limits/tick_scheduler/: tick_scheduler.cpp  tick_scheduler.hpp
http/middleware/: http_middleware.cpp  http_middleware.hpp
http/request/: http_request.hpp
http/response/: http_response.cpp  http_response.hpp  http_response.ipp
http/routing/: route_common.hpp  route_segment.cpp  route_segment.hpp  route_trie.cpp  route_trie.hpp  router.cpp  router.hpp
http/ssl/: http_ssl.hpp  http_ssl_factory.hpp
http/ssl/openssl/: http_openssl.cpp  http_openssl.hpp
include/: export_signature.hpp
include/async/: builtins.hpp  interface.hpp  macros.hpp  routes.hpp  runtime.hpp
include/core/: constructor.hpp  core.hpp  macros.hpp
include/form/: fields.hpp  forms.hpp  renders.hpp  sanitizers.hpp  validators.hpp
include/http/: aliases.hpp  helper.hpp  middleware.hpp  response.hpp  routes.hpp
os_specific/common/filecache/: filecache.cpp  filecache.hpp
os_specific/linux/: epoll_connection.cpp  epoll_connection.hpp  io_uring_connection.hpp
os_specific/linux/http/connection/: epoll_connection.cpp  epoll_connection.hpp  io_uring_connection.cpp  io_uring_connection.hpp
os_specific/linux/utils/filesystem/: filesystem.cpp  filesystem.hpp
os_specific/linux/utils/process/: process.cpp  process.hpp
os_specific/windows/: accept_ex_manager.cpp  accept_ex_manager.hpp
search/: search_index.json
shared/apis/: async_api.cpp  async_api.hpp  config_api.cpp  config_api.hpp  http_api.cpp  http_api.hpp  master_api.cpp  master_api.hpp
shared/utils/: deferred_init_vector.hpp  export_macro.hpp
test/: alloc_pool_mem_usage.cpp  buffer_pool_test.cpp  conc_hash_map_loop_usage.cpp  conc_hash_map_mem_usage.cpp  conc_hash_map_move_usage.cpp  conc_hash_map_test.cpp  mime_detector_test.cpp  move_only_func.cpp  parser_test.cpp  router_speed.cpp  rp_perf_test.cpp  rw_buffer_test.cpp  timer_heap_test.cpp  timer_wheel_test.cpp
tools/: generate_public_headers.py
utils/argument_parser/: argument_parser.cpp  argument_parser.hpp
utils/backport/: move_only_function.hpp  string.hpp
utils/buffer_pool/: buffer_pool.cpp  buffer_pool.hpp
utils/common/: file.hpp
utils/crypt/: hash.cpp  hash.hpp  hashers.cpp  hashers.hpp  string.cpp  string.hpp
utils/dotenv/: dotenv.cpp
utils/filecache/: filecache.cpp  filecache.hpp
utils/fileops/: filemeta.cpp  filemeta.hpp  filesystem.cpp  filesystem.hpp
utils/fileops/linux/: filemanip.cpp  filemanip.hpp
utils/fileops/windows/: filemanip.cpp  filemanip.hpp
utils/filesystem/: filesystem.cpp  filesystem.hpp
utils/fixed_pool/: fixed_pool.cpp  fixed_pool.hpp
utils/hash_map/: concurrent_hash_map.hpp  hash_shard.hpp  hash_shard.ipp
utils/hash_map/concurrent_map/: concurrent_hash_map.hpp  hash_shard.hpp  hash_shard.ipp
utils/logger/: logger.cpp  logger.hpp
utils/math/: math.cpp  math.hpp
utils/perf_timer/: perf_timer.hpp
utils/pool/: fixed_pool.cpp  fixed_pool.hpp
utils/process/: process.cpp  process.hpp
utils/rw_buffer/: rw_buffer.cpp  rw_buffer.hpp
utils/timer/timer_heap/: timer_heap.cpp  timer_heap.hpp
utils/timer/timer_wheel/: timer_wheel.cpp  timer_wheel.hpp
utils/timer_wheel/: ext_timer_wheel.hpp  timer_wheel.cpp  timer_wheel.hpp
utils/uuid/: uuid.cpp  uuid.hpp
(+8 files in other folders)
